Layout correction (white space)

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@ h1 {
 
 h2 {
   font-size: 1.5rem;
-  color: #199D83
+  color: #199D83;
+  margin-bottom: .5em;
 }
 
 p {
@@ -33,7 +34,7 @@ a:hover, a:focus {
 }
 
 h3 {
-  margin-top: .6em;
+  margin-top: 1em;
 }
 
 .links {
@@ -85,7 +86,7 @@ header {
 }
 
 .project-description {
-  margin-top: .7em;
+  margin-top: 0;
   padding-left: 1em;
 }
 
